--- a/base/templates/base/create-room.html
+++ b/base/templates/base/create-room.html
@@ -18,20 +18,22 @@
           </div>
         </div>
         <div class="layout__body">
-          <form class="form" action="#">
+          <form class="form" action="" method="POST">
+            {% csrf_token %}
+
             <div class="form__group">
-              <label for="room_name">Room Name</label>
-              <input id="room_name" name="room_name" type="text" placeholder="E.g. Mastering Python + Django" />
+              <label>Room Name</label>
+              {{form.name}}
             </div>
 
             <div class="form__group">
               <label for="room_topic">Topic</label>
               <input required type="text" name="topic" id="room_topic" list="topic-list" />
               <datalist id="topic-list">
-                <select id="room_topic">
-                  <option value="">Select your topic</option>
-                  <option value="Python">Python</option>
-                  <option value="Django">Django</option>
+                <select id="room_topic_list">
+                  {% for topic in topics %}
+                  <option value="{{topic.name}}">{{topic.name}}</option>
+                  {% endfor %}
                 </select>
               </datalist>
 
@@ -39,11 +41,11 @@
 
 
             <div class="form__group">
-              <label for="room_about">About</label>
-              <textarea name="room_about" id="room_about" placeholder="Write about your study group..."></textarea>
+              <label>Room description</label>
+              {{form.description}}
             </div>
             <div class="form__action">
-              <a class="btn btn--dark" href="index.html">Cancel</a>
+              <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
               <button class="btn btn--main" type="submit">Create Room</button>
             </div>
           </form>
